# ci_pepline

./: pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  user_manager.py
tests/: requirements.txt  test_user_manager.py
